fixed z-index issue with header and buttons

--- a/styles.scss
+++ b/styles.scss
@@ -116,7 +116,7 @@ $color_03:rgb(138, 0, 0);
             border: solid $menu_box_border_color 4px;
             box-shadow: 8px 8px 0px  $menu_box_accent_color ;
             filter:$menu_box_filter;
-            z-index: 200;
+            z-index: 100;
         }
 
         @include bg_sillohet( $background_size:$silohet_bg_size,   
@@ -198,7 +198,7 @@ header {
     position: sticky;
     position: -webkit-sticky;
     top: 0;
-    z-index: 100;
+    z-index: 122;
 
     img {
         grid-column: 1/ 2;
